Fix block sizing and text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,7 @@ header {
 @import url(http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic);
 
 .blocks {
+  width: 100%;
   max-width: 64%;
   padding: 0px;
   margin-top: 11%;
@@ -200,6 +201,8 @@ header {
   position:absolute;
   top:50%;
   transform:translateY(-50%);
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .popup h3 {
